<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:paddingTop="10dp"
        android:text="@string/project"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_toRightOf="@id/project"
        android:autoLink="web"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="@string/project_link"/>

    <TextView
        android:id="@+id/created_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project"
        android:paddingTop="20dp"
        android:text="@string/created_by_label"/>

    <TextView
        android:id="@+id/creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/created_by_label"
        android:layout_below="@id/created_by_label"
        android:paddingLeft="15dp"
        android:text="@string/creator"/>

    <TextView
        android:id="@+id/creator_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/created_by_label"
        android:layout_toRightOf="@id/creator"
        android:text="@string/separator"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/created_by_label"
        android:layout_toRightOf="@id/creator_separator"
        android:autoLink="web"
        android:paddingLeft="5dp"
        android:text="@string/creator_link"/>

    <TextView
        android:id="@+id/graphics_and_testing_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/creator"
        android:text="@string/graphics_and_testing_by_label"/>

    <TextView
        android:id="@+id/artist_and_tester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/graphics_and_testing_by_label"
        android:layout_below="@id/graphics_and_testing_by_label"
        android:paddingLeft="15dp"
        android:text="@string/artist_and_tester"/>

    <TextView
        android:id="@+id/artist_and_tester_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/graphics_and_testing_by_label"
        android:layout_toRightOf="@id/artist_and_tester"
        android:text="@string/separator"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/graphics_and_testing_by_label"
        android:layout_toRightOf="@id/artist_and_tester_separator"
        android:autoLink="web"
        android:paddingLeft="5dp"
        android:text="@string/artist_and_tester_link"/>

</RelativeLayout>